<resources>
    <string name="app_name">VideoMeetingApp</string>
    <string name="welcome_to">Welcome To</string>
    <string name="video_meeting_conference_app">Video Meeting | Conference App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_example_gmail_com">you@example@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="jonny">Jonny</string>
    <string name="last_name">Last Name</string>
    <string name="doo">Doo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
</resources>